envoy/istio/outbound/envoy_allow_any.yaml
configs:
- '@type': type.googleapis.com/envoy.admin.v3.BootstrapConfigDump
  bootstrap:
    admin:
      access_log:
      - name: envoy.access_loggers.file
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          path: /dev/null
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15000
      profile_path: /var/lib/istio/data/envoy.prof
    bootstrap_extensions:
    - name: envoy.bootstrap.internal_listener
      typed_config:
        '@type': type.googleapis.com/udpa.type.v1.TypedStruct
        type_url: type.googleapis.com/envoy.extensions.bootstrap.internal_listener.v3.InternalListener
        value:
          buffer_size_kb: 64
    dynamic_resources:
      ads_config:
        api_type: GRPC
        grpc_services:
        - envoy_grpc:
            cluster_name: xds-grpc
        set_node_on_first_message_only: true
        transport_api_version: V3
      cds_config:
        ads: {}
        initial_fetch_timeout: 0s
        resource_api_version: V3
      lds_config:
        ads: {}
        initial_fetch_timeout: 0s
        resource_api_version: V3
    layered_runtime:
      layers:
      - name: global config
        static_layer:
          envoy.deprecated_features:envoy.config.listener.v3.Listener.hidden_envoy_deprecated_use_original_dst: "true"
          envoy.reloadable_features.http_reject_path_with_fragment: "false"
          envoy.reloadable_features.no_extension_lookup_by_name: "false"
          overload.global_downstream_max_connections: "2147483647"
          re2.max_program_size.error_level: "32768"
      - admin_layer: {}
        name: admin
    node:
      cluster: nettool.default
      extensions:
      - category: envoy.thrift_proxy.filters
        name: envoy.filters.thrift.header_to_metadata
        type_urls:
        - envoy.extensions.filters.network.thrift_proxy.filters.header_to_metadata.v3.HeaderToMetadata
      - category: envoy.thrift_proxy.filters
        name: envoy.filters.thrift.rate_limit
        type_urls:
        - envoy.extensions.filters.network.thrift_proxy.filters.ratelimit.v3.RateLimit
      - category: envoy.thrift_proxy.filters
        name: envoy.filters.thrift.router
        type_urls:
        - envoy.extensions.filters.network.thrift_proxy.router.v3.Router
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.destination_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.destination_port
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.direct_source_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.dns_san
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.request_headers
        type_urls:
        - envoy.type.matcher.v3.HttpRequestHeaderMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.request_trailers
        type_urls:
        - envoy.type.matcher.v3.HttpRequestTrailerMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.response_headers
        type_urls:
        - envoy.type.matcher.v3.HttpResponseHeaderMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.response_trailers
        type_urls:
        - envoy.type.matcher.v3.HttpResponseTrailerMatchInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.server_name
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.source_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.source_port
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourcePortInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.source_type
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.subject
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput
      - category: envoy.matching.http.input
        name: envoy.matching.inputs.uri_san
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
      - category: envoy.matching.http.input
        name: query_params
        type_urls:
        - envoy.type.matcher.v3.HttpRequestQueryParamMatchInput
      - category: envoy.filters.http.upstream
        name: envoy.buffer
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.admission_control
        type_urls:
        - envoy.extensions.filters.http.admission_control.v3.AdmissionControl
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.buffer
        type_urls:
        - envoy.extensions.filters.http.buffer.v3.Buffer
        - envoy.extensions.filters.http.buffer.v3.BufferPerRoute
      - category: envoy.filters.http.upstream
        name: envoy.filters.http.upstream_codec
        type_urls:
        - envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
      - category: envoy.tracers
        name: envoy.dynamic.ot
      - category: envoy.tracers
        name: envoy.tracers.datadog
        type_urls:
        - envoy.config.trace.v3.DatadogConfig
      - category: envoy.tracers
        name: envoy.tracers.dynamic_ot
        type_urls:
        - envoy.config.trace.v3.DynamicOtConfig
      - category: envoy.tracers
        name: envoy.tracers.opencensus
        type_urls:
        - envoy.config.trace.v3.OpenCensusConfig
      - category: envoy.tracers
        name: envoy.tracers.opentelemetry
        type_urls:
        - envoy.config.trace.v3.OpenTelemetryConfig
      - category: envoy.tracers
        name: envoy.tracers.skywalking
        type_urls:
        - envoy.config.trace.v3.SkyWalkingConfig
      - category: envoy.tracers
        name: envoy.tracers.xray
        type_urls:
        - envoy.config.trace.v3.XRayConfig
      - category: envoy.tracers
        name: envoy.tracers.zipkin
        type_urls:
        - envoy.config.trace.v3.ZipkinConfig
      - category: envoy.tracers
        name: envoy.zipkin
      - category: envoy.path.rewrite
        name: envoy.path.rewrite.uri_template.uri_template_rewriter
        type_urls:
        - envoy.extensions.path.rewrite.uri_template.v3.UriTemplateRewriteConfig
      - category: envoy.quic.server.crypto_stream
        name: envoy.quic.crypto_stream.server.quiche
        type_urls:
        - envoy.extensions.quic.crypto_stream.v3.CryptoServerStreamConfig
      - category: envoy.health_checkers
        name: envoy.health_checkers.redis
        type_urls:
        - envoy.extensions.health_checkers.redis.v3.Redis
      - category: envoy.filters.http
        name: envoy.bandwidth_limit
      - category: envoy.filters.http
        name: envoy.buffer
      - category: envoy.filters.http
        name: envoy.cors
      - category: envoy.filters.http
        name: envoy.csrf
      - category: envoy.filters.http
        name: envoy.ext_authz
      - category: envoy.filters.http
        name: envoy.ext_proc
      - category: envoy.filters.http
        name: envoy.fault
      - category: envoy.filters.http
        name: envoy.filters.http.adaptive_concurrency
        type_urls:
        - envoy.extensions.filters.http.adaptive_concurrency.v3.AdaptiveConcurrency
      - category: envoy.filters.http
        name: envoy.filters.http.admission_control
        type_urls:
        - envoy.extensions.filters.http.admission_control.v3.AdmissionControl
      - category: envoy.filters.http
        name: envoy.filters.http.alternate_protocols_cache
        type_urls:
        - envoy.extensions.filters.http.alternate_protocols_cache.v3.FilterConfig
      - category: envoy.filters.http
        name: envoy.filters.http.aws_lambda
        type_urls:
        - envoy.extensions.filters.http.aws_lambda.v3.Config
        - envoy.extensions.filters.http.aws_lambda.v3.PerRouteConfig
      - category: envoy.filters.http
        name: envoy.filters.http.aws_request_signing
        type_urls:
        - envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
      - category: envoy.filters.http
        name: envoy.filters.http.bandwidth_limit
        type_urls:
        - envoy.extensions.filters.http.bandwidth_limit.v3.BandwidthLimit
      - category: envoy.filters.http
        name: envoy.filters.http.buffer
        type_urls:
        - envoy.extensions.filters.http.buffer.v3.Buffer
        - envoy.extensions.filters.http.buffer.v3.BufferPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.cache
        type_urls:
        - envoy.extensions.filters.http.cache.v3.CacheConfig
      - category: envoy.filters.http
        name: envoy.filters.http.cdn_loop
        type_urls:
        - envoy.extensions.filters.http.cdn_loop.v3.CdnLoopConfig
      - category: envoy.filters.http
        name: envoy.filters.http.composite
        type_urls:
        - envoy.extensions.filters.http.composite.v3.Composite
      - category: envoy.filters.http
        name: envoy.filters.http.compressor
        type_urls:
        - envoy.extensions.filters.http.compressor.v3.Compressor
        - envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.connect_authority
        type_urls:
        - io.istio.http.connect_authority.Config
      - category: envoy.filters.http
        name: envoy.filters.http.connect_baggage
        type_urls:
        - io.istio.http.connect_baggage.Config
      - category: envoy.filters.http
        name: envoy.filters.http.cors
        type_urls:
        - envoy.extensions.filters.http.cors.v3.Cors
        - envoy.extensions.filters.http.cors.v3.CorsPolicy
      - category: envoy.filters.http
        name: envoy.filters.http.csrf
        type_urls:
        - envoy.extensions.filters.http.csrf.v3.CsrfPolicy
      - category: envoy.filters.http
        name: envoy.filters.http.decompressor
        type_urls:
        - envoy.extensions.filters.http.decompressor.v3.Decompressor
      - category: envoy.filters.http
        name: envoy.filters.http.dynamic_forward_proxy
        type_urls:
        - envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
        - envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
      - category: envoy.filters.http
        name: envoy.filters.http.ext_authz
        type_urls:
        - envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
        - envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.ext_proc
        type_urls:
        - envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
        - envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
      - category: envoy.filters.http
        name: envoy.filters.http.fault
        type_urls:
        - envoy.extensions.filters.http.fault.v3.HTTPFault
      - category: envoy.filters.http
        name: envoy.filters.http.golang
        type_urls:
        - envoy.extensions.filters.http.golang.v3alpha.Config
        - envoy.extensions.filters.http.golang.v3alpha.ConfigsPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_http1_bridge
        type_urls:
        - envoy.extensions.filters.http.grpc_http1_bridge.v3.Config
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_http1_reverse_bridge
        type_urls:
        - envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfig
        - envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfigPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_json_transcoder
        type_urls:
        - envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_stats
        type_urls:
        - envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
      - category: envoy.filters.http
        name: envoy.filters.http.grpc_web
        type_urls:
        - envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
      - category: envoy.filters.http
        name: envoy.filters.http.header_to_metadata
        type_urls:
        - envoy.extensions.filters.http.header_to_metadata.v3.Config
      - category: envoy.filters.http
        name: envoy.filters.http.health_check
        type_urls:
        - envoy.extensions.filters.http.health_check.v3.HealthCheck
      - category: envoy.filters.http
        name: envoy.filters.http.ip_tagging
        type_urls:
        - envoy.extensions.filters.http.ip_tagging.v3.IPTagging
      - category: envoy.filters.http
        name: envoy.filters.http.istio_stats
        type_urls:
        - stats.PluginConfig
      - category: envoy.filters.http
        name: envoy.filters.http.jwt_authn
        type_urls:
        - envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
        - envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
      - category: envoy.filters.http
        name: envoy.filters.http.local_ratelimit
        type_urls:
        - envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
      - category: envoy.filters.http
        name: envoy.filters.http.lua
        type_urls:
        - envoy.extensions.filters.http.lua.v3.Lua
        - envoy.extensions.filters.http.lua.v3.LuaPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.match_delegate
        type_urls:
        - envoy.extensions.common.matching.v3.ExtensionWithMatcher
      - category: envoy.filters.http
        name: envoy.filters.http.oauth2
        type_urls:
        - envoy.extensions.filters.http.oauth2.v3.OAuth2
      - category: envoy.filters.http
        name: envoy.filters.http.on_demand
        type_urls:
        - envoy.extensions.filters.http.on_demand.v3.OnDemand
        - envoy.extensions.filters.http.on_demand.v3.PerRouteConfig
      - category: envoy.filters.http
        name: envoy.filters.http.original_src
        type_urls:
        - envoy.extensions.filters.http.original_src.v3.OriginalSrc
      - category: envoy.filters.http
        name: envoy.filters.http.ratelimit
        type_urls:
        - envoy.extensions.filters.http.ratelimit.v3.RateLimit
        - envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.rbac
        type_urls:
        - envoy.extensions.filters.http.rbac.v3.RBAC
        - envoy.extensions.filters.http.rbac.v3.RBACPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.router
        type_urls:
        - envoy.extensions.filters.http.router.v3.Router
      - category: envoy.filters.http
        name: envoy.filters.http.set_metadata
        type_urls:
        - envoy.extensions.filters.http.set_metadata.v3.Config
      - category: envoy.filters.http
        name: envoy.filters.http.stateful_session
        type_urls:
        - envoy.extensions.filters.http.stateful_session.v3.StatefulSession
        - envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
      - category: envoy.filters.http
        name: envoy.filters.http.tap
        type_urls:
        - envoy.extensions.filters.http.tap.v3.Tap
      - category: envoy.filters.http
        name: envoy.filters.http.wasm
        type_urls:
        - envoy.extensions.filters.http.wasm.v3.Wasm
      - category: envoy.filters.http
        name: envoy.grpc_http1_bridge
      - category: envoy.filters.http
        name: envoy.grpc_json_transcoder
      - category: envoy.filters.http
        name: envoy.grpc_web
      - category: envoy.filters.http
        name: envoy.health_check
      - category: envoy.filters.http
        name: envoy.ip_tagging
      - category: envoy.filters.http
        name: envoy.local_rate_limit
      - category: envoy.filters.http
        name: envoy.lua
      - category: envoy.filters.http
        name: envoy.rate_limit
      - category: envoy.filters.http
        name: envoy.router
      - category: envoy.filters.http
        name: istio.alpn
        type_urls:
        - istio.envoy.config.filter.http.alpn.v2alpha1.FilterConfig
      - category: envoy.filters.http
        name: istio_authn
        type_urls:
        - istio.envoy.config.filter.http.authn.v2alpha1.FilterConfig
      - category: envoy.request_id
        name: envoy.request_id.uuid
        type_urls:
        - envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
      - category: network.connection.client
        name: default
      - category: network.connection.client
        name: envoy_internal
      - category: envoy.filters.network
        name: envoy.echo
      - category: envoy.filters.network
        name: envoy.ext_authz
      - category: envoy.filters.network
        name: envoy.filters.network.connect_authority
        type_urls:
        - io.istio.http.connect_authority.Config
      - category: envoy.filters.network
        name: envoy.filters.network.connection_limit
        type_urls:
        - envoy.extensions.filters.network.connection_limit.v3.ConnectionLimit
      - category: envoy.filters.network
        name: envoy.filters.network.direct_response
        type_urls:
        - envoy.extensions.filters.network.direct_response.v3.Config
      - category: envoy.filters.network
        name: envoy.filters.network.dubbo_proxy
        type_urls:
        - envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy
      - category: envoy.filters.network
        name: envoy.filters.network.echo
        type_urls:
        - envoy.extensions.filters.network.echo.v3.Echo
      - category: envoy.filters.network
        name: envoy.filters.network.ext_authz
        type_urls:
        - envoy.extensions.filters.network.ext_authz.v3.ExtAuthz
      - category: envoy.filters.network
        name: envoy.filters.network.http_connection_manager
        type_urls:
        - envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      - category: envoy.filters.network
        name: envoy.filters.network.istio_stats
        type_urls:
        - stats.PluginConfig
      - category: envoy.filters.network
        name: envoy.filters.network.local_ratelimit
        type_urls:
        - envoy.extensions.filters.network.local_ratelimit.v3.LocalRateLimit
      - category: envoy.filters.network
        name: envoy.filters.network.metadata_exchange
        type_urls:
        - envoy.tcp.metadataexchange.config.MetadataExchange
      - category: envoy.filters.network
        name: envoy.filters.network.mongo_proxy
        type_urls:
        - envoy.extensions.filters.network.mongo_proxy.v3.MongoProxy
      - category: envoy.filters.network
        name: envoy.filters.network.mysql_proxy
        type_urls:
        - envoy.extensions.filters.network.mysql_proxy.v3.MySQLProxy
      - category: envoy.filters.network
        name: envoy.filters.network.postgres_proxy
        type_urls:
        - envoy.extensions.filters.network.postgres_proxy.v3alpha.PostgresProxy
      - category: envoy.filters.network
        name: envoy.filters.network.ratelimit
        type_urls:
        - envoy.extensions.filters.network.ratelimit.v3.RateLimit
      - category: envoy.filters.network
        name: envoy.filters.network.rbac
        type_urls:
        - envoy.extensions.filters.network.rbac.v3.RBAC
      - category: envoy.filters.network
        name: envoy.filters.network.redis_proxy
        type_urls:
        - envoy.extensions.filters.network.redis_proxy.v3.RedisProxy
      - category: envoy.filters.network
        name: envoy.filters.network.sip_proxy
        type_urls:
        - envoy.extensions.filters.network.sip_proxy.v3alpha.SipProxy
      - category: envoy.filters.network
        name: envoy.filters.network.sni_cluster
        type_urls:
        - envoy.extensions.filters.network.sni_cluster.v3.SniCluster
      - category: envoy.filters.network
        name: envoy.filters.network.sni_dynamic_forward_proxy
        type_urls:
        - envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig
      - category: envoy.filters.network
        name: envoy.filters.network.tcp_cluster_rewrite
        type_urls:
        - istio.envoy.config.filter.network.tcp_cluster_rewrite.v2alpha1.TcpClusterRewrite
      - category: envoy.filters.network
        name: envoy.filters.network.tcp_proxy
        type_urls:
        - envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      - category: envoy.filters.network
        name: envoy.filters.network.thrift_proxy
        type_urls:
        - envoy.extensions.filters.network.thrift_proxy.v3.ThriftProxy
      - category: envoy.filters.network
        name: envoy.filters.network.wasm
        type_urls:
        - envoy.extensions.filters.network.wasm.v3.Wasm
      - category: envoy.filters.network
        name: envoy.filters.network.zookeeper_proxy
        type_urls:
        - envoy.extensions.filters.network.zookeeper_proxy.v3.ZooKeeperProxy
      - category: envoy.filters.network
        name: envoy.http_connection_manager
      - category: envoy.filters.network
        name: envoy.mongo_proxy
      - category: envoy.filters.network
        name: envoy.ratelimit
      - category: envoy.filters.network
        name: envoy.redis_proxy
      - category: envoy.filters.network
        name: envoy.tcp_proxy
      - category: envoy.filters.network
        name: forward_downstream_sni
        type_urls:
        - io.istio.tcp.forward_downstream_sni.v1.Config
      - category: envoy.filters.network
        name: io.istio.network.authn
        type_urls:
        - io.istio.network.authn.Config
      - category: envoy.filters.network
        name: sni_verifier
        type_urls:
        - io.istio.tcp.sni_verifier.v1.Config
      - category: envoy.common.key_value
        name: envoy.key_value.file_based
        type_urls:
        - envoy.extensions.key_value.file_based.v3.FileBasedKeyValueStoreConfig
      - category: envoy.http.header_validators
        name: envoy.http.header_validators.envoy_default
        type_urls:
        - envoy.extensions.http.header_validators.envoy_default.v3.HeaderValidatorConfig
      - category: envoy.rate_limit_descriptors
        name: envoy.rate_limit_descriptors.expr
        type_urls:
        - envoy.extensions.rate_limit_descriptors.expr.v3.Descriptor
      - category: envoy.matching.common_inputs
        name: envoy.matching.common_inputs.environment_variable
        type_urls:
        - envoy.extensions.matching.common_inputs.environment_variable.v3.Config
      - category: envoy.internal_redirect_predicates
        name: envoy.internal_redirect_predicates.allow_listed_routes
        type_urls:
        - envoy.extensions.internal_redirect.allow_listed_routes.v3.AllowListedRoutesConfig
      - category: envoy.internal_redirect_predicates
        name: envoy.internal_redirect_predicates.previous_routes
        type_urls:
        - envoy.extensions.internal_redirect.previous_routes.v3.PreviousRoutesConfig
      - category: envoy.internal_redirect_predicates
        name: envoy.internal_redirect_predicates.safe_cross_scheme
        type_urls:
        - envoy.extensions.internal_redirect.safe_cross_scheme.v3.SafeCrossSchemeConfig
      - category: envoy.thrift_proxy.protocols
        name: auto
      - category: envoy.thrift_proxy.protocols
        name: binary
      - category: envoy.thrift_proxy.protocols
        name: binary/non-strict
      - category: envoy.thrift_proxy.protocols
        name: compact
      - category: envoy.thrift_proxy.protocols
        name: twitter
      - category: envoy.bootstrap
        name: envoy.bootstrap.internal_listener
        type_urls:
        - envoy.extensions.bootstrap.internal_listener.v3.InternalListener
      - category: envoy.bootstrap
        name: envoy.bootstrap.wasm
        type_urls:
        - envoy.extensions.wasm.v3.WasmService
      - category: envoy.bootstrap
        name: envoy.bootstrap.workload_discovery
        type_urls:
        - istio.workload.BootstrapExtension
      - category: envoy.bootstrap
        name: envoy.extensions.network.socket_interface.default_socket_interface
        type_urls:
        - envoy.extensions.network.socket_interface.v3.DefaultSocketInterface
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.application_protocol
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.ApplicationProtocolInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.destination_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.destination_port
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.direct_source_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.dns_san
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.filter_state
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.FilterStateInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.server_name
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.source_ip
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.source_port
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourcePortInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.source_type
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.subject
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.transport_protocol
        type_urls:
        - envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput
      - category: envoy.matching.network.input
        name: envoy.matching.inputs.uri_san
        type_urls:
        - envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
      - category: envoy.guarddog_actions
        name: envoy.watchdog.abort_action
        type_urls:
        - envoy.watchdog.v3.AbortActionConfig
      - category: envoy.guarddog_actions
        name: envoy.watchdog.profile_action
        type_urls:
        - envoy.extensions.watchdog.profile_action.v3.ProfileActionConfig
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.alts
        type_urls:
        - envoy.extensions.transport_sockets.alts.v3.Alts
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.quic
        type_urls:
        - envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.raw_buffer
        type_urls:
        - envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.starttls
        type_urls:
        - envoy.extensions.transport_sockets.starttls.v3.StartTlsConfig
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.tap
        type_urls:
        - envoy.extensions.transport_sockets.tap.v3.Tap
      - category: envoy.transport_sockets.downstream
        name: envoy.transport_sockets.tls
        type_urls:
        - envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
      - category: envoy.transport_sockets.downstream
        name: raw_buffer
      - category: envoy.transport_sockets.downstream
        name: starttls
      - category: envoy.transport_sockets.downstream
        name: tls
      - category: envoy.compression.compressor
        name: envoy.compression.brotli.compressor
        type_urls:
        - envoy.extensions.compression.brotli.compressor.v3.Brotli
      - category: envoy.compression.compressor
        name: envoy.compression.gzip.compressor
        type_urls:
        - envoy.extensions.compression.gzip.compressor.v3.Gzip
      - category: envoy.quic.connection_id_generator
        name: envoy.quic.deterministic_connection_id_generator
        type_urls:
        - envoy.extensions.quic.connection_id_generator.v3.DeterministicConnectionIdGeneratorConfig
      - category: envoy.sip_proxy.filters
        name: envoy.filters.sip.router
        type_urls:
        - envoy.extensions.filters.network.sip_proxy.router.v3alpha.Router
      - category: envoy.access_loggers
        name: envoy.access_loggers.file
        type_urls:
        - envoy.extensions.access_loggers.file.v3.FileAccessLog
      - category: envoy.access_loggers
        name: envoy.access_loggers.http_grpc
        type_urls:
        - envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
      - category: envoy.access_loggers
        name: envoy.access_loggers.open_telemetry
        type_urls:
        - envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
      - category: envoy.access_loggers
        name: envoy.access_loggers.stderr
        type_urls:
        - envoy.extensions.access_loggers.stream.v3.StderrAccessLog
      - category: envoy.access_loggers
        name: envoy.access_loggers.stdout
        type_urls:
        - envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
      - category: envoy.access_loggers
        name: envoy.access_loggers.tcp_grpc
        type_urls:
        - envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig
      - category: envoy.access_loggers
        name: envoy.access_loggers.wasm
        type_urls:
        - envoy.extensions.access_loggers.wasm.v3.WasmAccessLog
      - category: envoy.access_loggers
        name: envoy.file_access_log
      - category: envoy.access_loggers
        name: envoy.http_grpc_access_log
      - category: envoy.access_loggers
        name: envoy.open_telemetry_access_log
      - category: envoy.access_loggers
        name: envoy.stderr_access_log
      - category: envoy.access_loggers
        name: envoy.stdout_access_log
      - category: envoy.access_loggers
        name: envoy.tcp_grpc_access_log
      - category: envoy.access_loggers
        name: envoy.wasm_access_log
      - category: envoy.filters.udp_listener
        name: envoy.filters.udp.dns_filter
        type_urls:
        - envoy.extensions.filters.udp.dns_filter.v3.DnsFilterConfig
      - category: envoy.filters.udp_listener
        name: envoy.filters.udp_listener.udp_proxy
        type_urls:
        - envoy.extensions.filters.udp.udp_proxy.v3.UdpProxyConfig
      - category: envoy.clusters
        name: envoy.cluster.eds
      - category: envoy.clusters
        name: envoy.cluster.logical_dns
      - category: envoy.clusters
        name: envoy.cluster.original_dst
      - category: envoy.clusters
        name: envoy.cluster.static
      - category: envoy.clusters
        name: envoy.cluster.strict_dns
      - category: envoy.clusters
        name: envoy.clusters.aggregate
      - category: envoy.clusters
        name: envoy.clusters.dynamic_forward_proxy
      - category: envoy.clusters
        name: envoy.clusters.redis
      - category: envoy.access_loggers.extension_filters
        name: envoy.access_loggers.extension_filters.cel
        type_urls:
        - envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter
      - category: envoy.resource_monitors
        name: envoy.resource_monitors.fixed_heap
        type_urls:
        - envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
      - category: envoy.resource_monitors
        name: envoy.resource_monitors.injected_resource
        type_urls:
        - envoy.extensions.resource_monitors.injected_resource.v3.InjectedResourceConfig
      - category: envoy.dubbo_proxy.filters
        name: envoy.filters.dubbo.router
        type_urls:
        - envoy.extensions.filters.network.dubbo_proxy.router.v3.Router
      - category: envoy.http.original_ip_detection
        name: envoy.http.original_ip_detection.custom_header
        type_urls:
        - envoy.extensions.http.original_ip_detection.custom_header.v3.CustomHeaderConfig
      - category: envoy.http.original_ip_detection
        name: envoy.http.original_ip_detection.xff
        type_urls:
        - envoy.extensions.http.original_ip_detection.xff.v3.XffConfig
      - category: envoy.formatter
        name: envoy.formatter.metadata
        type_urls:
        - envoy.extensions.formatter.metadata.v3.Metadata
      - category: envoy.formatter
        name: envoy.formatter.req_without_query
        type_urls:
        - envoy.extensions.formatter.req_without_query.v3.ReqWithoutQuery
      - category: envoy.http.cache
        name: envoy.extensions.http.cache.simple
        type_urls:
        - envoy.extensions.http.cache.simple_http_cache.v3.SimpleHttpCacheConfig
      - category: envoy.regex_engines
        name: envoy.regex_engines.google_re2
        type_urls:
        - envoy.extensions.regex_engines.v3.GoogleRE2
      - category: envoy.retry_priorities
        name: envoy.retry_priorities.previous_priorities
        type_urls:
        - envoy.extensions.retry.priority.previous_priorities.v3.PreviousPrioritiesConfig
      - category: envoy.rbac.matchers
        name: envoy.rbac.matchers.upstream_ip_port
        type_urls:
        - envoy.extensions.rbac.matchers.upstream_ip_port.v3.UpstreamIpPortMatcher
      - category: envoy.wasm.runtime
        name: envoy.wasm.runtime.null
      - category: envoy.wasm.runtime
        name: envoy.wasm.runtime.v8
      - category: envoy.http.stateful_header_formatters
        name: envoy.http.stateful_header_formatters.preserve_case
        type_urls:
        - envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig
      - category: envoy.http.stateful_header_formatters
        name: preserve_case
      - category: envoy.dubbo_proxy.protocols
        name: dubbo
      - category: envoy.retry_host_predicates
        name: envoy.retry_host_predicates.omit_canary_hosts
        type_urls:
        - envoy.extensions.retry.host.omit_canary_hosts.v3.OmitCanaryHostsPredicate
      - category: envoy.retry_host_predicates
        name: envoy.retry_host_predicates.omit_host_metadata
        type_urls:
        - envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig
      - category: envoy.retry_host_predicates
        name: envoy.retry_host_predicates.previous_hosts
        type_urls:
        - envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
      - category: envoy.network.connection_balance
        name: envoy.network.connection_balance.dlb
        type_urls:
        - envoy.extensions.network.connection_balance.dlb.v3alpha.Dlb
      - category: envoy.resolvers
        name: envoy.ip
      - category: envoy.grpc_credentials
        name: envoy.grpc_credentials.aws_iam
      - category: envoy.grpc_credentials
        name: envoy.grpc_credentials.default
      - category: envoy.grpc_credentials
        name: envoy.grpc_credentials.file_based_metadata
      - category: envoy.tls.key_providers
        name: cryptomb
      - category: envoy.tls.key_providers
        name: qat
      - category: envoy.filters.upstream_network
        name: envoy.filters.network.upstream.metadata_exchange
        type_urls:
        - envoy.tcp.metadataexchange.config.MetadataExchange
      - category: envoy.http.stateful_session
        name: envoy.http.stateful_session.cookie
        type_urls:
        - envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
      - category: envoy.http.stateful_session
        name: envoy.http.stateful_session.header
        type_urls:
        - envoy.extensions.http.stateful_session.header.v3.HeaderBasedSessionState
      - category: envoy.matching.network.custom_matchers
        name: envoy.matching.custom_matchers.trie_matcher
        type_urls:
        - xds.type.matcher.v3.IPMatcher
      - category: envoy.thrift_proxy.transports
        name: auto
      - category: envoy.thrift_proxy.transports
        name: framed
      - category: envoy.thrift_proxy.transports
        name: header
      - category: envoy.thrift_proxy.transports
        name: unframed
      - category: quic.http_server_connection
        name: quic.http_server_connection.default
      - category: envoy.matching.action
        name: envoy.matching.actions.format_string
        type_urls:
        - envoy.config.core.v3.SubstitutionFormatString
      - category: envoy.matching.action
        name: filter-chain-name
        type_urls:
        - google.protobuf.StringValue
      - category: envoy.quic.proof_source
        name: envoy.quic.proof_source.filter_chain
        type_urls:
        - envoy.extensions.quic.proof_source.v3.ProofSourceConfig
      - category: envoy.connection_handler
        name: envoy.connection_handler.default
      - category: envoy.network.dns_resolver
        name: envoy.network.dns_resolver.cares
        type_urls:
        - envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
      - category: envoy.upstream_options
        name: envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        type_urls:
        - envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      - category: envoy.upstream_options
        name: envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions
        type_urls:
        - envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions
      - category: envoy.upstream_options
        name: envoy.upstreams.http.http_protocol_options
      - category: envoy.upstream_options
        name: envoy.upstreams.tcp.tcp_protocol_options
      - category: envoy.tls.cert_validator
        name: envoy.tls.cert_validator.default
      - category: envoy.tls.cert_validator
        name: envoy.tls.cert_validator.spiffe
      - category: envoy.compression.decompressor
        name: envoy.compression.brotli.decompressor
        type_urls:
        - envoy.extensions.compression.brotli.decompressor.v3.Brotli
      - category: envoy.compression.decompressor
        name: envoy.compression.gzip.decompressor
        type_urls:
        - envoy.extensions.compression.gzip.decompressor.v3.Gzip
      - category: envoy.dubbo_proxy.serializers
        name: dubbo.hessian2
      - category: envoy.listener_manager_impl
        name: envoy.listener_manager_impl.default
        type_urls:
        - envoy.config.listener.v3.ListenerManager
      - category: envoy.listener_manager_impl
        name: envoy.listener_manager_impl.validation
        type_urls:
        - envoy.config.listener.v3.ValidationListenerManager
      - category: envoy.path.match
        name: envoy.path.match.uri_template.uri_template_matcher
        type_urls:
        - envoy.extensions.path.match.uri_template.v3.UriTemplateMatchConfig
      - category: envoy.matching.input_matchers
        name: envoy.matching.matchers.consistent_hashing
        type_urls:
        - envoy.extensions.matching.input_matchers.consistent_hashing.v3.ConsistentHashing
      - category: envoy.matching.input_matchers
        name: envoy.matching.matchers.ip
        type_urls:
        - envoy.extensions.matching.input_matchers.ip.v3.Ip
      - category: envoy.matching.http.custom_matchers
        name: envoy.matching.custom_matchers.trie_matcher
        type_urls:
        - xds.type.matcher.v3.IPMatcher
      - category: envoy.upstreams
        name: envoy.filters.connection_pools.tcp.generic
        type_urls:
        - envoy.extensions.upstreams.tcp.generic.v3.GenericConnectionPoolProto
      - category: envoy.stats_sinks
        name: envoy.dog_statsd
      - category: envoy.stats_sinks
        name: envoy.graphite_statsd
      - category: envoy.stats_sinks
        name: envoy.metrics_service
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.dog_statsd
        type_urls:
        - envoy.config.metrics.v3.DogStatsdSink
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.graphite_statsd
        type_urls:
        - envoy.extensions.stat_sinks.graphite_statsd.v3.GraphiteStatsdSink
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.hystrix
        type_urls:
        - envoy.config.metrics.v3.HystrixSink
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.metrics_service
        type_urls:
        - envoy.config.metrics.v3.MetricsServiceConfig
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.statsd
        type_urls:
        - envoy.config.metrics.v3.StatsdSink
      - category: envoy.stats_sinks
        name: envoy.stat_sinks.wasm
        type_urls:
        - envoy.extensions.stat_sinks.wasm.v3.Wasm
      - category: envoy.stats_sinks
        name: envoy.statsd
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.alts
        type_urls:
        - envoy.extensions.transport_sockets.alts.v3.Alts
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.internal_upstream
        type_urls:
        - envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.quic
        type_urls:
        - envoy.extensions.transport_sockets.quic.v3.QuicUpstreamTransport
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.raw_buffer
        type_urls:
        - envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.starttls
        type_urls:
        - envoy.extensions.transport_sockets.starttls.v3.UpstreamStartTlsConfig
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.tap
        type_urls:
        - envoy.extensions.transport_sockets.tap.v3.Tap
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.tls
        type_urls:
        - envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      - category: envoy.transport_sockets.upstream
        name: envoy.transport_sockets.upstream_proxy_protocol
        type_urls:
        - envoy.extensions.transport_sockets.proxy_protocol.v3.ProxyProtocolUpstreamTransport
      - category: envoy.transport_sockets.upstream
        name: raw_buffer
      - category: envoy.transport_sockets.upstream
        name: starttls
      - category: envoy.transport_sockets.upstream
        name: tls
      - category: envoy.udp_packet_writer
        name: envoy.udp_packet_writer.default
        type_urls:
        - envoy.extensions.udp_packet_writer.v3.UdpDefaultWriterFactory
      - category: envoy.udp_packet_writer
        name: envoy.udp_packet_writer.gso
        type_urls:
        - envoy.extensions.udp_packet_writer.v3.UdpGsoBatchWriterFactory
      - category: envoy.route.early_data_policy
        name: envoy.route.early_data_policy.default
        type_urls:
        - envoy.extensions.early_data.v3.DefaultEarlyDataPolicy
      - category: envoy.filters.listener
        name: envoy.filters.listener.http_inspector
        type_urls:
        - envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
      - category: envoy.filters.listener
        name: envoy.filters.listener.original_dst
        type_urls:
        - envoy.extensions.filters.listener.original_dst.v3.OriginalDst
      - category: envoy.filters.listener
        name: envoy.filters.listener.original_src
        type_urls:
        - envoy.extensions.filters.listener.original_src.v3.OriginalSrc
      - category: envoy.filters.listener
        name: envoy.filters.listener.proxy_protocol
        type_urls:
        - envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol
      - category: envoy.filters.listener
        name: envoy.filters.listener.tls_inspector
        type_urls:
        - envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      - category: envoy.filters.listener
        name: envoy.listener.http_inspector
      - category: envoy.filters.listener
        name: envoy.listener.original_dst
      - category: envoy.filters.listener
        name: envoy.listener.original_src
      - category: envoy.filters.listener
        name: envoy.listener.proxy_protocol
      - category: envoy.filters.listener
        name: envoy.listener.tls_inspector
      - category: envoy.filters.listener
        name: istio.set_internal_dst_address
        type_urls:
        - istio.set_internal_dst_address.v1.Config
      id: sidecar~10.244.0.7~nettool.default~default.svc.cluster.local
      locality: {}
      metadata:
        ANNOTATIONS:
          istio.io/rev: default
          kubectl.kubernetes.io/default-container: nettool
          kubectl.kubernetes.io/default-logs-container: nettool
          kubernetes.io/config.seen: "2023-06-30T11:39:14.624471934Z"
          kubernetes.io/config.source: api
          prometheus.io/path: /stats/prometheus
          prometheus.io/port: "15020"
          prometheus.io/scrape: "true"
          sidecar.istio.io/status: '{"initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":null,"revision":"default"}'
        APP_CONTAINERS: nettool
        CLUSTER_ID: Kubernetes
        ENVOY_PROMETHEUS_PORT: 15090
        ENVOY_STATUS_PORT: 15021
        INSTANCE_IPS: 10.244.0.7
        INTERCEPTION_MODE: REDIRECT
        ISTIO_PROXY_SHA: e9ff5fc6ab89d0383d2db9e3a45ca13d96e58729
        ISTIO_VERSION: 1.18.0
        LABELS:
          run: nettool
          security.istio.io/tlsMode: istio
          service.istio.io/canonical-name: nettool
          service.istio.io/canonical-revision: latest
        MESH_ID: cluster.local
        NAME: nettool
        NAMESPACE: default
        NODE_NAME: istio-demo-2-control-plane
        OWNER: kubernetes://apis/v1/namespaces/default/pods/nettool
        PILOT_SAN:
        - istiod.istio-system.svc
        POD_PORTS: |-
          [
          ]
        PROXY_CONFIG:
          binaryPath: /usr/local/bin/envoy
          concurrency: 2
          configPath: ./etc/istio/proxy
          controlPlaneAuthPolicy: MUTUAL_TLS
          discoveryAddress: istiod.istio-system.svc:15012
          drainDuration: 45s
          proxyAdminPort: 15000
          serviceCluster: istio-proxy
          statNameLength: 189
          statusPort: 15020
          terminationDrainDuration: 5s
          tracing:
            zipkin:
              address: zipkin.istio-system:9411
        SERVICE_ACCOUNT: default
        WORKLOAD_NAME: nettool
      user_agent_build_version:
        metadata:
          build.label: dev
          build.type: RELEASE
          revision.sha: e9ff5fc6ab89d0383d2db9e3a45ca13d96e58729
          revision.status: Clean
          ssl.version: BoringSSL
        version:
          major_number: 1
          minor_number: 26
          patch: 3
      user_agent_name: envoy
    static_resources:
      clusters:
      - connect_timeout: 0.250s
        load_assignment:
          cluster_name: prometheus_stats
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 15000
        name: prometheus_stats
        type: STATIC
      - connect_timeout: 0.250s
        load_assignment:
          cluster_name: agent
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 15020
        name: agent
        type: STATIC
      - connect_timeout: 1s
        load_assignment:
          cluster_name: sds-grpc
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  pipe:
                    path: ./var/run/secrets/workload-spiffe-uds/socket
        name: sds-grpc
        type: STATIC
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
      - circuit_breakers:
          thresholds:
          - max_connections: 100000
            max_pending_requests: 100000
            max_requests: 100000
          - max_connections: 100000
            max_pending_requests: 100000
            max_requests: 100000
            priority: HIGH
        connect_timeout: 1s
        load_assignment:
          cluster_name: xds-grpc
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  pipe:
                    path: ./etc/istio/proxy/XDS
        max_requests_per_connection: 1
        name: xds-grpc
        type: STATIC
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        upstream_connection_options:
          tcp_keepalive:
            keepalive_time: 300
      - connect_timeout: 1s
        dns_lookup_family: V4_ONLY
        dns_refresh_rate: 30s
        load_assignment:
          cluster_name: zipkin
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: zipkin.istio-system
                    port_value: 9411
        name: zipkin
        respect_dns_ttl: true
        type: STRICT_DNS
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 15090
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - domains:
                  - '*'
                  name: backend
                  routes:
                  - match:
                      prefix: /stats/prometheus
                    route:
                      cluster: prometheus_stats
              stat_prefix: stats
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 15021
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - domains:
                  - '*'
                  name: backend
                  routes:
                  - match:
                      prefix: /healthz/ready
                    route:
                      cluster: agent
              stat_prefix: agent
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: reporter=
          - prefix: cluster_manager
          - prefix: listener_manager
          - prefix: server
          - prefix: cluster.xds-grpc
          - prefix: wasm
          - suffix: rbac.allowed
          - suffix: rbac.denied
          - suffix: shadow_allowed
          - suffix: shadow_denied
          - safe_regex:
              regex: vhost\.*\.route\.*
          - prefix: component
          - prefix: istio
      stats_tags:
      - regex: ^cluster\.((.+?(\..+?\.svc\.cluster\.local)?)\.)
        tag_name: cluster_name
      - regex: ^tcp\.((.*?)\.)\w+?$
        tag_name: tcp_prefix
      - regex: _rq(_(\d{3}))$
        tag_name: response_code
      - regex: _rq(_(\dxx))$
        tag_name: response_code_class
      - regex: ^listener(?=\.).*?\.http\.(((?:[_.[:digit:]]*|[_\[\]aAbBcCdDeEfF[:digit:]]*))\.)
        tag_name: http_conn_manager_listener_prefix
      - regex: ^http\.(((?:[_.[:digit:]]*|[_\[\]aAbBcCdDeEfF[:digit:]]*))\.)
        tag_name: http_conn_manager_prefix
      - regex: ^listener\.(((?:[_.[:digit:]]*|[_\[\]aAbBcCdDeEfF[:digit:]]*))\.)
        tag_name: listener_address
      - regex: ^mongo\.(.+?)\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$
        tag_name: mongo_prefix
      - regex: (cache\.(.+?)\.)
        tag_name: cache
      - regex: (component\.(.+?)\.)
        tag_name: component
      - regex: (tag\.(.+?);\.)
        tag_name: tag
      - regex: (wasm_filter\.(.+?)\.)
        tag_name: wasm_filter
      - regex: rbac(\.(allowed|denied))
        tag_name: authz_enforce_result
      - regex: (\.istio_dry_run_(allow|deny)_)
        tag_name: authz_dry_run_action
      - regex: (\.shadow_(allowed|denied))
        tag_name: authz_dry_run_result
      use_all_default_tags: false
    tracing:
      http:
        name: envoy.tracers.zipkin
        typed_config:
          '@type': type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
          collector_cluster: zipkin
          collector_endpoint: /api/v2/spans
          collector_endpoint_version: HTTP_JSON
          shared_span_context: false
          trace_id_128bit: true
  last_updated: "2023-06-30T11:39:32.252Z"
- '@type': type.googleapis.com/envoy.admin.v3.ClustersConfigDump
  dynamic_active_clusters:
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      connect_timeout: 10s
      name: BlackHoleCluster
      type: STATIC
    last_updated: "2023-06-30T11:39:32.274Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      connect_timeout: 10s
      lb_policy: CLUSTER_PROVIDED
      name: InboundPassthroughClusterIpv4
      type: ORIGINAL_DST
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          common_http_protocol_options:
            idle_timeout: 300s
          use_downstream_protocol_config:
            http_protocol_options: {}
            http2_protocol_options: {}
      upstream_bind_config:
        source_address:
          address: 127.0.0.6
          port_value: 0
    last_updated: "2023-06-30T11:39:32.274Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      connect_timeout: 10s
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: CLUSTER_PROVIDED
      name: PassthroughCluster
      type: ORIGINAL_DST
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          common_http_protocol_options:
            idle_timeout: 300s
          use_downstream_protocol_config:
            http_protocol_options: {}
            http2_protocol_options: {}
    last_updated: "2023-06-30T11:39:32.274Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|15010||istiod.istio-system.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: istiod.istio-system.svc.cluster.local
              name: istiod
              namespace: istio-system
      name: outbound|15010||istiod.istio-system.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              - h2
              combined_validation_context:
                default_validation_context:
                  match_subject_alt_names:
                  - exact: spiffe://cluster.local/ns/istio-system/sa/istiod
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.15010_._.istiod.istio-system.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
    last_updated: "2023-06-30T11:39:32.273Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|15012||istiod.istio-system.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: istiod.istio-system.svc.cluster.local
              name: istiod
              namespace: istio-system
      name: outbound|15012||istiod.istio-system.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              combined_validation_context:
                default_validation_context:
                  match_subject_alt_names:
                  - exact: spiffe://cluster.local/ns/istio-system/sa/istiod
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.15012_._.istiod.istio-system.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
    last_updated: "2023-06-30T11:39:32.273Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|15014||istiod.istio-system.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: istiod.istio-system.svc.cluster.local
              name: istiod
              namespace: istio-system
      name: outbound|15014||istiod.istio-system.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              combined_validation_context:
                default_validation_context:
                  match_subject_alt_names:
                  - exact: spiffe://cluster.local/ns/istio-system/sa/istiod
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.15014_._.istiod.istio-system.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
    last_updated: "2023-06-30T11:39:32.273Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|15021||ingressgateway.istio-system.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: ingressgateway.istio-system.svc.cluster.local
              name: ingressgateway
              namespace: istio-system
      name: outbound|15021||ingressgateway.istio-system.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              combined_validation_context:
                default_validation_context:
                  match_subject_alt_names:
                  - exact: spiffe://cluster.local/ns/istio-system/sa/ingressgateway-service-account
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.15021_._.ingressgateway.istio-system.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          use_downstream_protocol_config:
            http_protocol_options: {}
            http2_protocol_options: {}
    last_updated: "2023-06-30T11:39:32.274Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|443||ingressgateway.istio-system.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: ingressgateway.istio-system.svc.cluster.local
              name: ingressgateway
              namespace: istio-system
      name: outbound|443||ingressgateway.istio-system.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              combined_validation_context:
                default_validation_context:
                  match_subject_alt_names:
                  - exact: spiffe://cluster.local/ns/istio-system/sa/ingressgateway-service-account
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.443_._.ingressgateway.istio-system.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
    last_updated: "2023-06-30T11:39:32.274Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|443||istiod.istio-system.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: istiod.istio-system.svc.cluster.local
              name: istiod
              namespace: istio-system
      name: outbound|443||istiod.istio-system.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              combined_validation_context:
                default_validation_context:
                  match_subject_alt_names:
                  - exact: spiffe://cluster.local/ns/istio-system/sa/istiod
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.443_._.istiod.istio-system.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
    last_updated: "2023-06-30T11:39:32.273Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|443||kubernetes.default.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: kubernetes.default.svc.cluster.local
              name: kubernetes
              namespace: default
      name: outbound|443||kubernetes.default.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              combined_validation_context:
                default_validation_context: {}
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.443_._.kubernetes.default.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
    last_updated: "2023-06-30T11:39:32.272Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|53||kube-dns.kube-system.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: kube-dns.kube-system.svc.cluster.local
              name: kube-dns
              namespace: kube-system
      name: outbound|53||kube-dns.kube-system.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              combined_validation_context:
                default_validation_context:
                  match_subject_alt_names:
                  - exact: spiffe://cluster.local/ns/kube-system/sa/coredns
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.53_._.kube-dns.kube-system.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
    last_updated: "2023-06-30T11:39:32.272Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|80||ingressgateway.istio-system.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: ingressgateway.istio-system.svc.cluster.local
              name: ingressgateway
              namespace: istio-system
      name: outbound|80||ingressgateway.istio-system.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              - h2
              combined_validation_context:
                default_validation_context:
                  match_subject_alt_names:
                  - exact: spiffe://cluster.local/ns/istio-system/sa/ingressgateway-service-account
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.80_._.ingressgateway.istio-system.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
    last_updated: "2023-06-30T11:39:32.274Z"
    version_info: 2023-06-30T11:38:57Z/4
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 4294967295
          max_pending_requests: 4294967295
          max_requests: 4294967295
          max_retries: 4294967295
          track_remaining: true
      common_lb_config:
        locality_weighted_lb_config: {}
      connect_timeout: 10s
      eds_cluster_config:
        eds_config:
          ads: {}
          initial_fetch_timeout: 0s
          resource_api_version: V3
        service_name: outbound|9153||kube-dns.kube-system.svc.cluster.local
      filters:
      - name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          protocol: istio-peer-exchange
      lb_policy: LEAST_REQUEST
      metadata:
        filter_metadata:
          istio:
            services:
            - host: kube-dns.kube-system.svc.cluster.local
              name: kube-dns
              namespace: kube-system
      name: outbound|9153||kube-dns.kube-system.svc.cluster.local
      transport_socket_matches:
      - match:
          tlsMode: istio
        name: tlsMode-istio
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              alpn_protocols:
              - istio-peer-exchange
              - istio
              combined_validation_context:
                default_validation_context:
                  match_subject_alt_names:
                  - exact: spiffe://cluster.local/ns/kube-system/sa/coredns
                validation_context_sds_secret_config:
                  name: ROOTCA
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: sds-grpc
                    set_node_on_first_message_only: true
                    transport_api_version: V3
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
              tls_params:
                tls_maximum_protocol_version: TLSv1_3
                tls_minimum_protocol_version: TLSv1_2
            sni: outbound_.9153_._.kube-dns.kube-system.svc.cluster.local
      - match: {}
        name: tlsMode-disabled
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer
      type: EDS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          use_downstream_protocol_config:
            http_protocol_options: {}
            http2_protocol_options: {}
    last_updated: "2023-06-30T11:39:32.273Z"
    version_info: 2023-06-30T11:38:57Z/4
  static_clusters:
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      connect_timeout: 0.250s
      load_assignment:
        cluster_name: agent
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 15020
      name: agent
      type: STATIC
    last_updated: "2023-06-30T11:39:32.258Z"
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      connect_timeout: 0.250s
      load_assignment:
        cluster_name: prometheus_stats
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 15000
      name: prometheus_stats
      type: STATIC
    last_updated: "2023-06-30T11:39:32.258Z"
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      connect_timeout: 1s
      load_assignment:
        cluster_name: sds-grpc
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                pipe:
                  path: ./var/run/secrets/workload-spiffe-uds/socket
      name: sds-grpc
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
    last_updated: "2023-06-30T11:39:32.258Z"
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      circuit_breakers:
        thresholds:
        - max_connections: 100000
          max_pending_requests: 100000
          max_requests: 100000
        - max_connections: 100000
          max_pending_requests: 100000
          max_requests: 100000
          priority: HIGH
      connect_timeout: 1s
      load_assignment:
        cluster_name: xds-grpc
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                pipe:
                  path: ./etc/istio/proxy/XDS
      max_requests_per_connection: 1
      name: xds-grpc
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
    last_updated: "2023-06-30T11:39:32.261Z"
  - cluster:
      '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
      connect_timeout: 1s
      dns_lookup_family: V4_ONLY
      dns_refresh_rate: 30s
      load_assignment:
        cluster_name: zipkin
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: zipkin.istio-system
                  port_value: 9411
      name: zipkin
      respect_dns_ttl: true
      type: STRICT_DNS
    last_updated: "2023-06-30T11:39:32.261Z"
  version_info: 2023-06-30T11:38:57Z/4
- '@type': type.googleapis.com/envoy.admin.v3.ListenersConfigDump
  dynamic_listeners:
  - active_state:
      last_updated: "2023-06-30T11:39:32.283Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 10.96.179.204
            port_value: 15012
        bind_to_port: false
        filter_chains:
        - filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: outbound|15012||istiod.istio-system.svc.cluster.local
              stat_prefix: outbound|15012||istiod.istio-system.svc.cluster.local
        name: 10.96.179.204_15012
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 10.96.179.204_15012
  - active_state:
      last_updated: "2023-06-30T11:39:32.284Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 10.96.179.204
            port_value: 443
        bind_to_port: false
        filter_chains:
        - filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: outbound|443||istiod.istio-system.svc.cluster.local
              stat_prefix: outbound|443||istiod.istio-system.svc.cluster.local
        name: 10.96.179.204_443
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 10.96.179.204_443
  - active_state:
      last_updated: "2023-06-30T11:39:32.284Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 10.96.79.71
            port_value: 443
        bind_to_port: false
        filter_chains:
        - filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: outbound|443||ingressgateway.istio-system.svc.cluster.local
              stat_prefix: outbound|443||ingressgateway.istio-system.svc.cluster.local
        name: 10.96.79.71_443
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 10.96.79.71_443
  - active_state:
      last_updated: "2023-06-30T11:39:32.284Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 10.96.0.1
            port_value: 443
        bind_to_port: false
        filter_chains:
        - filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: outbound|443||kubernetes.default.svc.cluster.local
              stat_prefix: outbound|443||kubernetes.default.svc.cluster.local
        name: 10.96.0.1_443
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 10.96.0.1_443
  - active_state:
      last_updated: "2023-06-30T11:39:32.284Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 10.96.0.10
            port_value: 53
        bind_to_port: false
        filter_chains:
        - filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: outbound|53||kube-dns.kube-system.svc.cluster.local
              stat_prefix: outbound|53||kube-dns.kube-system.svc.cluster.local
        name: 10.96.0.10_53
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 10.96.0.10_53
  - active_state:
      last_updated: "2023-06-30T11:39:32.285Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        bind_to_port: false
        continue_on_listener_filters_timeout: true
        default_filter_chain:
          filter_chain_match: {}
          filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: PassthroughCluster
              stat_prefix: PassthroughCluster
          name: PassthroughFilterChain
        filter_chains:
        - filter_chain_match:
            application_protocols:
            - http/1.1
            - h2c
            transport_protocol: raw_buffer
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
              - name: istio.metadata_exchange
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    configuration:
                      '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
                    vm_config:
                      code:
                        local:
                          inline_string: envoy.wasm.metadata_exchange
                      runtime: envoy.wasm.runtime.null
              - name: envoy.filters.http.grpc_stats
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                  emit_filter_state: true
                  stats_for_all_methods: false
              - name: istio.alpn
                typed_config:
                  '@type': type.googleapis.com/istio.envoy.config.filter.http.alpn.v2alpha1.FilterConfig
                  alpn_override:
                  - alpn_override:
                    - istio-http/1.0
                    - istio
                    - http/1.0
                  - alpn_override:
                    - istio-http/1.1
                    - istio
                    - http/1.1
                    upstream_protocol: HTTP11
                  - alpn_override:
                    - istio-h2
                    - istio
                    - h2
                    upstream_protocol: HTTP2
              - name: envoy.filters.http.fault
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
              - name: envoy.filters.http.cors
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: istio.stats
                typed_config:
                  '@type': type.googleapis.com/stats.PluginConfig
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              normalize_path: true
              path_with_escaped_slashes_action: KEEP_UNCHANGED
              rds:
                config_source:
                  ads: {}
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
                route_config_name: "80"
              request_id_extension:
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                  use_request_id_for_trace_sampling: true
              stat_prefix: outbound_0.0.0.0_80
              stream_idle_timeout: 0s
              tracing:
                client_sampling:
                  value: 100
                custom_tags:
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.allow_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_engine_result
                  tag: istio.authorization.dry_run.allow_policy.result
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.deny_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_engine_result
                  tag: istio.authorization.dry_run.deny_policy.result
                - literal:
                    value: latest
                  tag: istio.canonical_revision
                - literal:
                    value: nettool
                  tag: istio.canonical_service
                - literal:
                    value: cluster.local
                  tag: istio.mesh_id
                - literal:
                    value: default
                  tag: istio.namespace
                overall_sampling:
                  value: 100
                random_sampling:
                  value: 1
              upgrade_configs:
              - upgrade_type: websocket
              use_remote_address: false
        listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: envoy.filters.listener.http_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
        listener_filters_timeout: 0s
        name: 0.0.0.0_80
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 0.0.0.0_80
  - active_state:
      last_updated: "2023-06-30T11:39:32.286Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 15010
        bind_to_port: false
        continue_on_listener_filters_timeout: true
        default_filter_chain:
          filter_chain_match: {}
          filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: PassthroughCluster
              stat_prefix: PassthroughCluster
          name: PassthroughFilterChain
        filter_chains:
        - filter_chain_match:
            application_protocols:
            - http/1.1
            - h2c
            transport_protocol: raw_buffer
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
              - name: istio.metadata_exchange
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    configuration:
                      '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
                    vm_config:
                      code:
                        local:
                          inline_string: envoy.wasm.metadata_exchange
                      runtime: envoy.wasm.runtime.null
              - name: envoy.filters.http.grpc_stats
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                  emit_filter_state: true
                  stats_for_all_methods: false
              - name: istio.alpn
                typed_config:
                  '@type': type.googleapis.com/istio.envoy.config.filter.http.alpn.v2alpha1.FilterConfig
                  alpn_override:
                  - alpn_override:
                    - istio-http/1.0
                    - istio
                    - http/1.0
                  - alpn_override:
                    - istio-http/1.1
                    - istio
                    - http/1.1
                    upstream_protocol: HTTP11
                  - alpn_override:
                    - istio-h2
                    - istio
                    - h2
                    upstream_protocol: HTTP2
              - name: envoy.filters.http.fault
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
              - name: envoy.filters.http.cors
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: istio.stats
                typed_config:
                  '@type': type.googleapis.com/stats.PluginConfig
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              normalize_path: true
              path_with_escaped_slashes_action: KEEP_UNCHANGED
              rds:
                config_source:
                  ads: {}
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
                route_config_name: "15010"
              request_id_extension:
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                  use_request_id_for_trace_sampling: true
              stat_prefix: outbound_0.0.0.0_15010
              stream_idle_timeout: 0s
              tracing:
                client_sampling:
                  value: 100
                custom_tags:
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.allow_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_engine_result
                  tag: istio.authorization.dry_run.allow_policy.result
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.deny_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_engine_result
                  tag: istio.authorization.dry_run.deny_policy.result
                - literal:
                    value: latest
                  tag: istio.canonical_revision
                - literal:
                    value: nettool
                  tag: istio.canonical_service
                - literal:
                    value: cluster.local
                  tag: istio.mesh_id
                - literal:
                    value: default
                  tag: istio.namespace
                overall_sampling:
                  value: 100
                random_sampling:
                  value: 1
              upgrade_configs:
              - upgrade_type: websocket
              use_remote_address: false
        listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: envoy.filters.listener.http_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
        listener_filters_timeout: 0s
        name: 0.0.0.0_15010
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 0.0.0.0_15010
  - active_state:
      last_updated: "2023-06-30T11:39:32.286Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 10.96.0.10
            port_value: 9153
        bind_to_port: false
        continue_on_listener_filters_timeout: true
        default_filter_chain:
          filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: outbound|9153||kube-dns.kube-system.svc.cluster.local
              stat_prefix: outbound|9153||kube-dns.kube-system.svc.cluster.local
        filter_chains:
        - filter_chain_match:
            application_protocols:
            - http/1.1
            - h2c
            transport_protocol: raw_buffer
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
              - name: istio.metadata_exchange
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    configuration:
                      '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
                    vm_config:
                      code:
                        local:
                          inline_string: envoy.wasm.metadata_exchange
                      runtime: envoy.wasm.runtime.null
              - name: envoy.filters.http.grpc_stats
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                  emit_filter_state: true
                  stats_for_all_methods: false
              - name: istio.alpn
                typed_config:
                  '@type': type.googleapis.com/istio.envoy.config.filter.http.alpn.v2alpha1.FilterConfig
                  alpn_override:
                  - alpn_override:
                    - istio-http/1.0
                    - istio
                    - http/1.0
                  - alpn_override:
                    - istio-http/1.1
                    - istio
                    - http/1.1
                    upstream_protocol: HTTP11
                  - alpn_override:
                    - istio-h2
                    - istio
                    - h2
                    upstream_protocol: HTTP2
              - name: envoy.filters.http.fault
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
              - name: envoy.filters.http.cors
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: istio.stats
                typed_config:
                  '@type': type.googleapis.com/stats.PluginConfig
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              normalize_path: true
              path_with_escaped_slashes_action: KEEP_UNCHANGED
              rds:
                config_source:
                  ads: {}
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
                route_config_name: kube-dns.kube-system.svc.cluster.local:9153
              request_id_extension:
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                  use_request_id_for_trace_sampling: true
              stat_prefix: outbound_10.96.0.10_9153
              stream_idle_timeout: 0s
              tracing:
                client_sampling:
                  value: 100
                custom_tags:
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.allow_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_engine_result
                  tag: istio.authorization.dry_run.allow_policy.result
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.deny_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_engine_result
                  tag: istio.authorization.dry_run.deny_policy.result
                - literal:
                    value: latest
                  tag: istio.canonical_revision
                - literal:
                    value: nettool
                  tag: istio.canonical_service
                - literal:
                    value: cluster.local
                  tag: istio.mesh_id
                - literal:
                    value: default
                  tag: istio.namespace
                overall_sampling:
                  value: 100
                random_sampling:
                  value: 1
              upgrade_configs:
              - upgrade_type: websocket
              use_remote_address: false
        listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: envoy.filters.listener.http_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
        listener_filters_timeout: 0s
        name: 10.96.0.10_9153
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 10.96.0.10_9153
  - active_state:
      last_updated: "2023-06-30T11:39:32.286Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 15014
        bind_to_port: false
        continue_on_listener_filters_timeout: true
        default_filter_chain:
          filter_chain_match: {}
          filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: PassthroughCluster
              stat_prefix: PassthroughCluster
          name: PassthroughFilterChain
        filter_chains:
        - filter_chain_match:
            application_protocols:
            - http/1.1
            - h2c
            transport_protocol: raw_buffer
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
              - name: istio.metadata_exchange
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    configuration:
                      '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
                    vm_config:
                      code:
                        local:
                          inline_string: envoy.wasm.metadata_exchange
                      runtime: envoy.wasm.runtime.null
              - name: envoy.filters.http.grpc_stats
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                  emit_filter_state: true
                  stats_for_all_methods: false
              - name: istio.alpn
                typed_config:
                  '@type': type.googleapis.com/istio.envoy.config.filter.http.alpn.v2alpha1.FilterConfig
                  alpn_override:
                  - alpn_override:
                    - istio-http/1.0
                    - istio
                    - http/1.0
                  - alpn_override:
                    - istio-http/1.1
                    - istio
                    - http/1.1
                    upstream_protocol: HTTP11
                  - alpn_override:
                    - istio-h2
                    - istio
                    - h2
                    upstream_protocol: HTTP2
              - name: envoy.filters.http.fault
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
              - name: envoy.filters.http.cors
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: istio.stats
                typed_config:
                  '@type': type.googleapis.com/stats.PluginConfig
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              normalize_path: true
              path_with_escaped_slashes_action: KEEP_UNCHANGED
              rds:
                config_source:
                  ads: {}
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
                route_config_name: "15014"
              request_id_extension:
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                  use_request_id_for_trace_sampling: true
              stat_prefix: outbound_0.0.0.0_15014
              stream_idle_timeout: 0s
              tracing:
                client_sampling:
                  value: 100
                custom_tags:
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.allow_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_engine_result
                  tag: istio.authorization.dry_run.allow_policy.result
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.deny_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_engine_result
                  tag: istio.authorization.dry_run.deny_policy.result
                - literal:
                    value: latest
                  tag: istio.canonical_revision
                - literal:
                    value: nettool
                  tag: istio.canonical_service
                - literal:
                    value: cluster.local
                  tag: istio.mesh_id
                - literal:
                    value: default
                  tag: istio.namespace
                overall_sampling:
                  value: 100
                random_sampling:
                  value: 1
              upgrade_configs:
              - upgrade_type: websocket
              use_remote_address: false
        listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: envoy.filters.listener.http_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
        listener_filters_timeout: 0s
        name: 0.0.0.0_15014
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 0.0.0.0_15014
  - active_state:
      last_updated: "2023-06-30T11:39:32.287Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 10.96.79.71
            port_value: 15021
        bind_to_port: false
        continue_on_listener_filters_timeout: true
        default_filter_chain:
          filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: outbound|15021||ingressgateway.istio-system.svc.cluster.local
              stat_prefix: outbound|15021||ingressgateway.istio-system.svc.cluster.local
        filter_chains:
        - filter_chain_match:
            application_protocols:
            - http/1.1
            - h2c
            transport_protocol: raw_buffer
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              http_filters:
              - name: istio.metadata_exchange
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    configuration:
                      '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
                    vm_config:
                      code:
                        local:
                          inline_string: envoy.wasm.metadata_exchange
                      runtime: envoy.wasm.runtime.null
              - name: envoy.filters.http.grpc_stats
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                  emit_filter_state: true
                  stats_for_all_methods: false
              - name: istio.alpn
                typed_config:
                  '@type': type.googleapis.com/istio.envoy.config.filter.http.alpn.v2alpha1.FilterConfig
                  alpn_override:
                  - alpn_override:
                    - istio-http/1.0
                    - istio
                    - http/1.0
                  - alpn_override:
                    - istio-http/1.1
                    - istio
                    - http/1.1
                    upstream_protocol: HTTP11
                  - alpn_override:
                    - istio-h2
                    - istio
                    - h2
                    upstream_protocol: HTTP2
              - name: envoy.filters.http.fault
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
              - name: envoy.filters.http.cors
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: istio.stats
                typed_config:
                  '@type': type.googleapis.com/stats.PluginConfig
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              normalize_path: true
              path_with_escaped_slashes_action: KEEP_UNCHANGED
              rds:
                config_source:
                  ads: {}
                  initial_fetch_timeout: 0s
                  resource_api_version: V3
                route_config_name: ingressgateway.istio-system.svc.cluster.local:15021
              request_id_extension:
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                  use_request_id_for_trace_sampling: true
              stat_prefix: outbound_10.96.79.71_15021
              stream_idle_timeout: 0s
              tracing:
                client_sampling:
                  value: 100
                custom_tags:
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.allow_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_engine_result
                  tag: istio.authorization.dry_run.allow_policy.result
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.deny_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_engine_result
                  tag: istio.authorization.dry_run.deny_policy.result
                - literal:
                    value: latest
                  tag: istio.canonical_revision
                - literal:
                    value: nettool
                  tag: istio.canonical_service
                - literal:
                    value: cluster.local
                  tag: istio.mesh_id
                - literal:
                    value: default
                  tag: istio.namespace
                overall_sampling:
                  value: 100
                random_sampling:
                  value: 1
              upgrade_configs:
              - upgrade_type: websocket
              use_remote_address: false
        listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: envoy.filters.listener.http_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
        listener_filters_timeout: 0s
        name: 10.96.79.71_15021
        traffic_direction: OUTBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: 10.96.79.71_15021
  - active_state:
      last_updated: "2023-06-30T11:39:32.287Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 15001
        filter_chains:
        - filter_chain_match:
            destination_port: 15001
          filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: BlackHoleCluster
              stat_prefix: BlackHoleCluster
          name: virtualOutbound-blackhole
        - filters:
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: PassthroughCluster
              stat_prefix: PassthroughCluster
          name: virtualOutbound-catchall-tcp
        name: virtualOutbound
        traffic_direction: OUTBOUND
        use_original_dst: true
      version_info: 2023-06-30T11:38:57Z/4
    name: virtualOutbound
  - active_state:
      last_updated: "2023-06-30T11:39:32.292Z"
      listener:
        '@type': type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 15006
        continue_on_listener_filters_timeout: true
        filter_chains:
        - filter_chain_match:
            destination_port: 15006
          filters:
          - name: istio.metadata_exchange
            typed_config:
              '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
              protocol: istio-peer-exchange
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
              disable_host_header_fallback: true
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: BlackHoleCluster
              stat_prefix: BlackHoleCluster
          name: virtualInbound-blackhole
        - filter_chain_match:
            application_protocols:
            - istio-http/1.0
            - istio-http/1.1
            - istio-h2
            prefix_ranges:
            - address_prefix: 0.0.0.0
              prefix_len: 0
            transport_protocol: tls
          filters:
          - name: istio_authn
            typed_config:
              '@type': type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/io.istio.network.authn.Config
          - name: istio.metadata_exchange
            typed_config:
              '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
              protocol: istio-peer-exchange
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              forward_client_cert_details: APPEND_FORWARD
              http_filters:
              - name: istio.metadata_exchange
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    configuration:
                      '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
                    vm_config:
                      code:
                        local:
                          inline_string: envoy.wasm.metadata_exchange
                      runtime: envoy.wasm.runtime.null
              - name: envoy.filters.http.grpc_stats
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                  emit_filter_state: true
                  stats_for_all_methods: false
              - name: envoy.filters.http.fault
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
              - name: envoy.filters.http.cors
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: istio.stats
                typed_config:
                  '@type': type.googleapis.com/stats.PluginConfig
                  disable_host_header_fallback: true
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              normalize_path: true
              path_with_escaped_slashes_action: KEEP_UNCHANGED
              request_id_extension:
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                  use_request_id_for_trace_sampling: true
              route_config:
                name: InboundPassthroughClusterIpv4
                validate_clusters: false
                virtual_hosts:
                - domains:
                  - '*'
                  name: inbound|http|0
                  routes:
                  - decorator:
                      operation: :0/*
                    match:
                      prefix: /
                    name: default
                    route:
                      cluster: InboundPassthroughClusterIpv4
                      max_stream_duration:
                        grpc_timeout_header_max: 0s
                        max_stream_duration: 0s
                      timeout: 0s
              server_name: istio-envoy
              set_current_client_cert_details:
                dns: true
                subject: true
                uri: true
              stat_prefix: InboundPassthroughClusterIpv4
              stream_idle_timeout: 0s
              tracing:
                client_sampling:
                  value: 100
                custom_tags:
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.allow_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_engine_result
                  tag: istio.authorization.dry_run.allow_policy.result
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.deny_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_engine_result
                  tag: istio.authorization.dry_run.deny_policy.result
                - literal:
                    value: latest
                  tag: istio.canonical_revision
                - literal:
                    value: nettool
                  tag: istio.canonical_service
                - literal:
                    value: cluster.local
                  tag: istio.mesh_id
                - literal:
                    value: default
                  tag: istio.namespace
                overall_sampling:
                  value: 100
                random_sampling:
                  value: 1
              upgrade_configs:
              - upgrade_type: websocket
              use_remote_address: false
          name: virtualInbound-catchall-http
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols:
                - h2
                - http/1.1
                combined_validation_context:
                  default_validation_context:
                    match_subject_alt_names:
                    - prefix: spiffe://cluster.local/
                  validation_context_sds_secret_config:
                    name: ROOTCA
                    sds_config:
                      api_config_source:
                        api_type: GRPC
                        grpc_services:
                        - envoy_grpc:
                            cluster_name: sds-grpc
                        set_node_on_first_message_only: true
                        transport_api_version: V3
                      initial_fetch_timeout: 0s
                      resource_api_version: V3
                tls_certificate_sds_secret_configs:
                - name: default
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
                tls_params:
                  cipher_suites:
                  - ECDHE-ECDSA-AES256-GCM-SHA384
                  - ECDHE-RSA-AES256-GCM-SHA384
                  - ECDHE-ECDSA-AES128-GCM-SHA256
                  - ECDHE-RSA-AES128-GCM-SHA256
                  - AES256-GCM-SHA384
                  - AES128-GCM-SHA256
                  tls_maximum_protocol_version: TLSv1_3
                  tls_minimum_protocol_version: TLSv1_2
              require_client_certificate: true
        - filter_chain_match:
            application_protocols:
            - http/1.1
            - h2c
            prefix_ranges:
            - address_prefix: 0.0.0.0
              prefix_len: 0
            transport_protocol: raw_buffer
          filters:
          - name: istio_authn
            typed_config:
              '@type': type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/io.istio.network.authn.Config
          - name: istio.metadata_exchange
            typed_config:
              '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
              protocol: istio-peer-exchange
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              forward_client_cert_details: APPEND_FORWARD
              http_filters:
              - name: istio.metadata_exchange
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  config:
                    configuration:
                      '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
                    vm_config:
                      code:
                        local:
                          inline_string: envoy.wasm.metadata_exchange
                      runtime: envoy.wasm.runtime.null
              - name: envoy.filters.http.grpc_stats
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                  emit_filter_state: true
                  stats_for_all_methods: false
              - name: envoy.filters.http.fault
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
              - name: envoy.filters.http.cors
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: istio.stats
                typed_config:
                  '@type': type.googleapis.com/stats.PluginConfig
                  disable_host_header_fallback: true
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              normalize_path: true
              path_with_escaped_slashes_action: KEEP_UNCHANGED
              request_id_extension:
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                  use_request_id_for_trace_sampling: true
              route_config:
                name: InboundPassthroughClusterIpv4
                validate_clusters: false
                virtual_hosts:
                - domains:
                  - '*'
                  name: inbound|http|0
                  routes:
                  - decorator:
                      operation: :0/*
                    match:
                      prefix: /
                    name: default
                    route:
                      cluster: InboundPassthroughClusterIpv4
                      max_stream_duration:
                        grpc_timeout_header_max: 0s
                        max_stream_duration: 0s
                      timeout: 0s
              server_name: istio-envoy
              set_current_client_cert_details:
                dns: true
                subject: true
                uri: true
              stat_prefix: InboundPassthroughClusterIpv4
              stream_idle_timeout: 0s
              tracing:
                client_sampling:
                  value: 100
                custom_tags:
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.allow_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_allow_shadow_engine_result
                  tag: istio.authorization.dry_run.allow_policy.result
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_effective_policy_id
                  tag: istio.authorization.dry_run.deny_policy.name
                - metadata:
                    kind:
                      request: {}
                    metadata_key:
                      key: envoy.filters.http.rbac
                      path:
                      - key: istio_dry_run_deny_shadow_engine_result
                  tag: istio.authorization.dry_run.deny_policy.result
                - literal:
                    value: latest
                  tag: istio.canonical_revision
                - literal:
                    value: nettool
                  tag: istio.canonical_service
                - literal:
                    value: cluster.local
                  tag: istio.mesh_id
                - literal:
                    value: default
                  tag: istio.namespace
                overall_sampling:
                  value: 100
                random_sampling:
                  value: 1
              upgrade_configs:
              - upgrade_type: websocket
              use_remote_address: false
          name: virtualInbound-catchall-http
        - filter_chain_match:
            application_protocols:
            - istio-peer-exchange
            - istio
            prefix_ranges:
            - address_prefix: 0.0.0.0
              prefix_len: 0
            transport_protocol: tls
          filters:
          - name: istio_authn
            typed_config:
              '@type': type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/io.istio.network.authn.Config
          - name: istio.metadata_exchange
            typed_config:
              '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
              protocol: istio-peer-exchange
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
              disable_host_header_fallback: true
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: InboundPassthroughClusterIpv4
              stat_prefix: InboundPassthroughClusterIpv4
          name: virtualInbound
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols:
                - istio-peer-exchange
                - h2
                - http/1.1
                combined_validation_context:
                  default_validation_context:
                    match_subject_alt_names:
                    - prefix: spiffe://cluster.local/
                  validation_context_sds_secret_config:
                    name: ROOTCA
                    sds_config:
                      api_config_source:
                        api_type: GRPC
                        grpc_services:
                        - envoy_grpc:
                            cluster_name: sds-grpc
                        set_node_on_first_message_only: true
                        transport_api_version: V3
                      initial_fetch_timeout: 0s
                      resource_api_version: V3
                tls_certificate_sds_secret_configs:
                - name: default
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                      - envoy_grpc:
                          cluster_name: sds-grpc
                      set_node_on_first_message_only: true
                      transport_api_version: V3
                    initial_fetch_timeout: 0s
                    resource_api_version: V3
                tls_params:
                  cipher_suites:
                  - ECDHE-ECDSA-AES256-GCM-SHA384
                  - ECDHE-RSA-AES256-GCM-SHA384
                  - ECDHE-ECDSA-AES128-GCM-SHA256
                  - ECDHE-RSA-AES128-GCM-SHA256
                  - AES256-GCM-SHA384
                  - AES128-GCM-SHA256
                  tls_maximum_protocol_version: TLSv1_3
                  tls_minimum_protocol_version: TLSv1_2
              require_client_certificate: true
        - filter_chain_match:
            prefix_ranges:
            - address_prefix: 0.0.0.0
              prefix_len: 0
            transport_protocol: raw_buffer
          filters:
          - name: istio_authn
            typed_config:
              '@type': type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/io.istio.network.authn.Config
          - name: istio.metadata_exchange
            typed_config:
              '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
              protocol: istio-peer-exchange
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
              disable_host_header_fallback: true
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: InboundPassthroughClusterIpv4
              stat_prefix: InboundPassthroughClusterIpv4
          name: virtualInbound
        - filter_chain_match:
            prefix_ranges:
            - address_prefix: 0.0.0.0
              prefix_len: 0
            transport_protocol: tls
          filters:
          - name: istio_authn
            typed_config:
              '@type': type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/io.istio.network.authn.Config
          - name: istio.metadata_exchange
            typed_config:
              '@type': type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
              protocol: istio-peer-exchange
          - name: istio.stats
            typed_config:
              '@type': type.googleapis.com/stats.PluginConfig
              disable_host_header_fallback: true
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: InboundPassthroughClusterIpv4
              stat_prefix: InboundPassthroughClusterIpv4
          name: virtualInbound
        listener_filters:
        - name: envoy.filters.listener.original_dst
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
        - filter_disabled:
            destination_port_range:
              end: 15007
              start: 15006
          name: envoy.filters.listener.tls_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - filter_disabled:
            destination_port_range:
              end: 15007
              start: 15006
          name: envoy.filters.listener.http_inspector
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
        listener_filters_timeout: 0s
        name: virtualInbound
        traffic_direction: INBOUND
      version_info: 2023-06-30T11:38:57Z/4
    name: virtualInbound
  static_listeners:
  - last_updated: "2023-06-30T11:39:32.263Z"
    listener:
      '@type': type.googleapis.com/envoy.config.listener.v3.Listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 15090
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            http_filters:
            - name: envoy.filters.http.router
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            route_config:
              virtual_hosts:
              - domains:
                - '*'
                name: backend
                routes:
                - match:
                    prefix: /stats/prometheus
                  route:
                    cluster: prometheus_stats
            stat_prefix: stats
  - last_updated: "2023-06-30T11:39:32.263Z"
    listener:
      '@type': type.googleapis.com/envoy.config.listener.v3.Listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 15021
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            http_filters:
            - name: envoy.filters.http.router
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            route_config:
              virtual_hosts:
              - domains:
                - '*'
                name: backend
                routes:
                - match:
                    prefix: /healthz/ready
                  route:
                    cluster: agent
            stat_prefix: agent
  version_info: 2023-06-30T11:38:57Z/4
- '@type': type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump
- '@type': type.googleapis.com/envoy.admin.v3.RoutesConfigDump
  dynamic_route_configs:
  - last_updated: "2023-06-30T11:39:32.293Z"
    route_config:
      '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      ignore_port_in_host_matching: true
      max_direct_response_body_size_bytes: 1048576
      name: "80"
      validate_clusters: false
      virtual_hosts:
      - domains:
        - ingressgateway.istio-system.svc.cluster.local
        - ingressgateway.istio-system
        - ingressgateway.istio-system.svc
        - 10.96.79.71
        include_request_attempt_count: true
        name: ingressgateway.istio-system.svc.cluster.local:80
        routes:
        - decorator:
            operation: ingressgateway.istio-system.svc.cluster.local:80/*
          match:
            prefix: /
          name: default
          route:
            cluster: outbound|80||ingressgateway.istio-system.svc.cluster.local
            max_grpc_timeout: 0s
            retry_policy:
              host_selection_retry_max_attempts: "5"
              num_retries: 2
              retriable_status_codes:
              - 503
              retry_host_predicate:
              - name: envoy.retry_host_predicates.previous_hosts
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
              retry_on: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
            timeout: 0s
      - domains:
        - '*'
        include_request_attempt_count: true
        name: allow_any
        routes:
        - match:
            prefix: /
          name: allow_any
          route:
            cluster: PassthroughCluster
            max_grpc_timeout: 0s
            timeout: 0s
    version_info: 2023-06-30T11:38:57Z/4
  - last_updated: "2023-06-30T11:39:32.293Z"
    route_config:
      '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      ignore_port_in_host_matching: true
      max_direct_response_body_size_bytes: 1048576
      name: kube-dns.kube-system.svc.cluster.local:9153
      validate_clusters: false
      virtual_hosts:
      - domains:
        - '*'
        include_request_attempt_count: true
        name: kube-dns.kube-system.svc.cluster.local:9153
        routes:
        - decorator:
            operation: kube-dns.kube-system.svc.cluster.local:9153/*
          match:
            prefix: /
          name: default
          route:
            cluster: outbound|9153||kube-dns.kube-system.svc.cluster.local
            max_grpc_timeout: 0s
            retry_policy:
              host_selection_retry_max_attempts: "5"
              num_retries: 2
              retriable_status_codes:
              - 503
              retry_host_predicate:
              - name: envoy.retry_host_predicates.previous_hosts
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
              retry_on: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
            timeout: 0s
    version_info: 2023-06-30T11:38:57Z/4
  - last_updated: "2023-06-30T11:39:32.293Z"
    route_config:
      '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      ignore_port_in_host_matching: true
      max_direct_response_body_size_bytes: 1048576
      name: ingressgateway.istio-system.svc.cluster.local:15021
      validate_clusters: false
      virtual_hosts:
      - domains:
        - '*'
        include_request_attempt_count: true
        name: ingressgateway.istio-system.svc.cluster.local:15021
        routes:
        - decorator:
            operation: ingressgateway.istio-system.svc.cluster.local:15021/*
          match:
            prefix: /
          name: default
          route:
            cluster: outbound|15021||ingressgateway.istio-system.svc.cluster.local
            max_grpc_timeout: 0s
            retry_policy:
              host_selection_retry_max_attempts: "5"
              num_retries: 2
              retriable_status_codes:
              - 503
              retry_host_predicate:
              - name: envoy.retry_host_predicates.previous_hosts
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
              retry_on: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
            timeout: 0s
    version_info: 2023-06-30T11:38:57Z/4
  - last_updated: "2023-06-30T11:39:32.293Z"
    route_config:
      '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      ignore_port_in_host_matching: true
      max_direct_response_body_size_bytes: 1048576
      name: "15014"
      validate_clusters: false
      virtual_hosts:
      - domains:
        - istiod.istio-system.svc.cluster.local
        - istiod.istio-system
        - istiod.istio-system.svc
        - 10.96.179.204
        include_request_attempt_count: true
        name: istiod.istio-system.svc.cluster.local:15014
        routes:
        - decorator:
            operation: istiod.istio-system.svc.cluster.local:15014/*
          match:
            prefix: /
          name: default
          route:
            cluster: outbound|15014||istiod.istio-system.svc.cluster.local
            max_grpc_timeout: 0s
            retry_policy:
              host_selection_retry_max_attempts: "5"
              num_retries: 2
              retriable_status_codes:
              - 503
              retry_host_predicate:
              - name: envoy.retry_host_predicates.previous_hosts
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
              retry_on: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
            timeout: 0s
      - domains:
        - '*'
        include_request_attempt_count: true
        name: allow_any
        routes:
        - match:
            prefix: /
          name: allow_any
          route:
            cluster: PassthroughCluster
            max_grpc_timeout: 0s
            timeout: 0s
    version_info: 2023-06-30T11:38:57Z/4
  - last_updated: "2023-06-30T11:39:32.293Z"
    route_config:
      '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      ignore_port_in_host_matching: true
      max_direct_response_body_size_bytes: 1048576
      name: "15010"
      validate_clusters: false
      virtual_hosts:
      - domains:
        - istiod.istio-system.svc.cluster.local
        - istiod.istio-system
        - istiod.istio-system.svc
        - 10.96.179.204
        include_request_attempt_count: true
        name: istiod.istio-system.svc.cluster.local:15010
        routes:
        - decorator:
            operation: istiod.istio-system.svc.cluster.local:15010/*
          match:
            prefix: /
          name: default
          route:
            cluster: outbound|15010||istiod.istio-system.svc.cluster.local
            max_grpc_timeout: 0s
            retry_policy:
              host_selection_retry_max_attempts: "5"
              num_retries: 2
              retriable_status_codes:
              - 503
              retry_host_predicate:
              - name: envoy.retry_host_predicates.previous_hosts
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
              retry_on: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
            timeout: 0s
      - domains:
        - '*'
        include_request_attempt_count: true
        name: allow_any
        routes:
        - match:
            prefix: /
          name: allow_any
          route:
            cluster: PassthroughCluster
            max_grpc_timeout: 0s
            timeout: 0s
    version_info: 2023-06-30T11:38:57Z/4
  static_route_configs:
  - last_updated: "2023-06-30T11:39:32.289Z"
    route_config:
      '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: InboundPassthroughClusterIpv4
      validate_clusters: false
      virtual_hosts:
      - domains:
        - '*'
        name: inbound|http|0
        routes:
        - decorator:
            operation: :0/*
          match:
            prefix: /
          name: default
          route:
            cluster: InboundPassthroughClusterIpv4
            max_stream_duration:
              grpc_timeout_header_max: 0s
              max_stream_duration: 0s
            timeout: 0s
  - last_updated: "2023-06-30T11:39:32.263Z"
    route_config:
      '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      virtual_hosts:
      - domains:
        - '*'
        name: backend
        routes:
        - match:
            prefix: /healthz/ready
          route:
            cluster: agent
  - last_updated: "2023-06-30T11:39:32.262Z"
    route_config:
      '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      virtual_hosts:
      - domains:
        - '*'
        name: backend
        routes:
        - match:
            prefix: /stats/prometheus
          route:
            cluster: prometheus_stats
  - last_updated: "2023-06-30T11:39:32.290Z"
    route_config:
      '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: InboundPassthroughClusterIpv4
      validate_clusters: false
      virtual_hosts:
      - domains:
        - '*'
        name: inbound|http|0
        routes:
        - decorator:
            operation: :0/*
          match:
            prefix: /
          name: default
          route:
            cluster: InboundPassthroughClusterIpv4
            max_stream_duration:
              grpc_timeout_header_max: 0s
              max_stream_duration: 0s
            timeout: 0s
- '@type': type.googleapis.com/envoy.admin.v3.SecretsConfigDump
  dynamic_active_secrets:
  - last_updated: "2023-06-30T11:39:32.277Z"
    name: default
    secret:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
      name: default
      tls_certificate:
        certificate_chain:
          inline_bytes: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRVENDQWltZ0F3SUJBZ0lSQUtYTkhRcjg2OTYyb1htSGwzN0lwNGd3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU16QTJNekF4TVRNM016SmFGdzB5TXpBMwpNREV4TVRNNU16SmFNQUF3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGJpbEhCClVrcnIwRG9CWGxoYTg3MlRWeGhFcGEvenE1cjVOeDZyRHRaUnlHUnBSWHBvbmYyMDQ4MklvV1dlM1dDemJBbmQKelNFVmlUaDlGQS81M2Z0TXUwb0NvUzh1d2doVm0wdlAvaTUzaXpkWTl2NC82d1lSZFUrNEV2TE15MUUrRVZjdgpMSVhu [...]
        private_key:
          inline_bytes: W3JlZGFjdGVkXQ==
  - last_updated: "2023-06-30T11:39:32.280Z"
    name: ROOTCA
    secret:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
      name: ROOTCA
      validation_context:
        trusted_ca:
          inline_bytes: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQU51cThGZkl6ZGJGV0FCM21jbmRqTmd3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU16QTJNekF4TVRNNE16VmFGdzB6TXpBMgpNamN4TVRNNE16VmFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ3BvYnppL1orVHVNQ2w1REZjNmF6cWNLekl3dGI1NzluRmZad0gKT21zS0llSDlnTzRsdzlKdnJ0cEwraEFNRlJndm04SEJEd0ZjRnZ3MmROU3pPeTZ3L3Q1SWtaNHhCL2Q3SDRjNgptb2pq [...]
